Uppdatera validate på bokning