@@ -35,29 +35,41 @@ public class RumServiceImpl implements RumService {
     }
 
     @Override
-    public List<DetaljerRumDto> findEmptyRumIgnoreCurrent(LocalDate date, LocalDate endDate,
+    public  List<DetaljerRumDto> findEmptyRumIgnoreCurrent(LocalDate date, LocalDate endDate,
                                                           int capacity,DetaljerBokningDto bokning){
+        if(!date.isBefore(endDate.plusDays(1))){
 
-        List<LocalDate> searchDates = date.datesUntil(endDate.plusDays(1)).toList();
+            return null;
 
-        return rumRepo.findAll().stream().map(this::rumToDetaljerRumDTO)
-                .filter(room -> room.getCapacity()>=capacity ).toList().stream()
-                .filter(r -> Collections.disjoint(r.getBokningar().stream()
-                        .filter(b -> !Objects.equals(b.getId(), bokning.getId()))
-                        .flatMap(b-> b.getDate().datesUntil(b.getEndDate().plusDays(1)))
-                        .toList(),searchDates)).collect(Collectors.toList());
+        } else {
+            List<LocalDate> searchDates = date.datesUntil(endDate.plusDays(1)).toList();
+
+            return rumRepo.findAll().stream().map(this::rumToDetaljerRumDTO)
+                    .filter(room -> room.getCapacity() >= capacity).toList().stream()
+                    .filter(r -> Collections.disjoint(r.getBokningar().stream()
+                            .filter(b -> !Objects.equals(b.getId(), bokning.getId()))
+                            .flatMap(b -> b.getDate().datesUntil(b.getEndDate().plusDays(1)))
+                            .toList(), searchDates)).collect(Collectors.toList());
+        }
     }
 
     @Override
     public List<DetaljerRumDto> findEmptyRum(LocalDate date, LocalDate endDate, int capacity) {
 
-        List<LocalDate> searchDates = date.datesUntil(endDate.plusDays(1)).toList();
+        if(!date.isBefore(endDate.plusDays(1))){
 
-        return rumRepo.findAll().stream().map(this::rumToDetaljerRumDTO)
-                .filter(room -> room.getCapacity()>=capacity).toList().stream()
-                .filter(r -> Collections.disjoint(r.getBokningar().stream()
-                        .flatMap(b-> b.getDate().datesUntil(b.getEndDate().plusDays(1)))
-                        .toList(),searchDates)).collect(Collectors.toList());
+            return null;
+
+        } else {
+
+            List<LocalDate> searchDates = date.datesUntil(endDate.plusDays(1)).toList();
+
+            return rumRepo.findAll().stream().map(this::rumToDetaljerRumDTO)
+                    .filter(room -> room.getCapacity() >= capacity).toList().stream()
+                    .filter(r -> Collections.disjoint(r.getBokningar().stream()
+                            .flatMap(b -> b.getDate().datesUntil(b.getEndDate().plusDays(1)))
+                            .toList(), searchDates)).collect(Collectors.toList());
+        }
     }
 
     @Override
